# driftkb

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml  security.yml
docs/: adapters.md  call-graph-cache.md  ci.md  comparison.md  concepts.md  frontmatter.md  gap-detection.md  non-goals.md  profiles.md  project-brief.md  quickstart.md  release-checklist.md  release-playbook.md  roadmap.md  verify-blocks.md
docs/community/: issue-backlog.md
docs/release-notes/: v0.1.0.md
docs/use-cases/: ai-assisted-engineering.md
driftkb/: __init__.py  __main__.py  promote.py
driftkb/adapters/: __init__.py  base.py  enterprise_java.py  registry.py
driftkb/adapters/generic/: __init__.py
driftkb/adapters/java/: __init__.py
driftkb/adapters/python/: __init__.py
driftkb/cli/: main.py
driftkb/core/: __init__.py  config.py  frontmatter.py  git.py  models.py  paths.py  report.py  validate.py
driftkb/fingerprints/: __init__.py  snapshots.py  update.py
driftkb/gaps/: detect.py
driftkb/graph/: __init__.py  cache.py  provider.py
driftkb/hooks/: __init__.py  install.py
driftkb/hooks/templates/: pre-push.sample
driftkb/profiles/: __init__.py  validators.py
driftkb/reporting/: json_report.py
driftkb/verify/: __init__.py  blocks.py
examples/minimal/: README.md
examples/minimal/.driftkb/: config.yml
examples/minimal/docs/kb/curated/: payment.md
examples/minimal/src/: payment.py
schemas/: call-graph-cache.schema.json  config.schema.json  fingerprint-snapshot.schema.json  report.schema.json
tests/: conftest.py  test_call_graph_cache.py  test_cli_smoke.py  test_config.py  test_enterprise_java_adapter.py  test_fingerprints.py  test_frontmatter.py  test_gaps.py  test_hooks.py  test_json_report.py  test_promote.py  test_validate.py  test_verify_blocks.py
