[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "driftkb"
version = "0.1.0"
description = "Keep Markdown knowledge bases honest when code changes."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0.1",
]
license = "Apache-2.0"
authors = [
  { name = "DriftKB contributors" }
]
keywords = [
  "ai-engineering",
  "ci",
  "cli",
  "developer-tools",
  "documentation",
  "documentation-drift",
  "docs-as-code",
  "drift",
  "knowledge-base",
  "markdown",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Documentation",
]

[project.urls]
Homepage = "https://github.com/lliangcol/driftkb"
Documentation = "https://github.com/lliangcol/driftkb/tree/main/docs"
Issues = "https://github.com/lliangcol/driftkb/issues"
Source = "https://github.com/lliangcol/driftkb"

[project.scripts]
driftkb = "driftkb.cli.main:main"

[project.entry-points."driftkb.adapters"]
generic = "driftkb.adapters.generic:GenericAdapter"
java = "driftkb.adapters.java:JavaRegexAdapter"
python = "driftkb.adapters.python:PythonAstAdapter"
enterprise-java = "driftkb.adapters.enterprise_java:EnterpriseJavaAdapter"

[project.optional-dependencies]
dev = [
  "build>=1",
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.8",
  "twine>=6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
